Modernize the fastzipfilereader package for Java 17
Use pattern matching for instanceof in the equals() methods and in the
FileSlice and HttpURLConnection type tests, use the diamond operator on
the anonymous SingletonMap and Recycler subclasses and the ConcurrentHashMap
set backings, use the try-with-resources form that takes an existing
effectively-final resource variable, replace Paths.get with Path.of, use
ByteArrayOutputStream.toString(Charset), StringBuilder.isEmpty() and
Long.compare, and replace a containsKey/put/get sequence with putIfAbsent.